--- a/index.html
+++ b/index.html
@@ -1,12 +1,221 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+ <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
+</head>
+<body>
+<header>
+    <nav>
+      <a> <img src="#" width="154" height="64" alt="CllacyShop"></a>
+       <ul>
+          <li> 
+            <a href="blank.html"> Каталог </a>
+            <ul>
+              <li><a href="#">Новинки </a></li>
+              <li><a href="#">Сливочное </a></li>
+              <li><a href="#">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
+          <li> 
+            <a href="blank.html"> Доставка и оплата  </a>
+          </li>
+          <li> 
+            <a href="blank.html"> О компании </a>
+          </li>
+        </ul>
+    </nav>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        <ul>
+          <li> Поиск
+            <ul>
+                <li>
+                    <p>
+                      <label>
+                          Поиск
+                          <input type="text" name="search" placeholder=" Крем-брюле">
+                      </label>
+                    </p>
+                </li>
+            </ul>
+          </li>
+          <li>  Вход
+            <ul>
+              <li>
+                  <form action="https://echo.htmlacademy.ru" method="POST">
+                    <p>
+                        <label for="login-login"> Логин </label>
+                        <input type="email" name="email" id="login-login" placeholder="email@example.com">
+                    </p>
+                    <p>
+                        <label for="login-password"> Пароль </label>
+                        <input type="password" name="password" id="login-password" placeholder="******">   
+                     </p> 
+                  <button type="submit">Войти</button>
+                      <p>
+                        <a href="#">Забыли пароль?</a>
+                        <a href="#">Новая регистрация</a> 
+                      </p>
+                  </form>
+              </li>
+              </ul>
+          </li>
+          <li><a href="#"> Пусто</a></li>
+         </ul>
+         <p> с 10 до 20, ежедневно <br>
+         <a href="tel:+7812452525">8 812 450-25-25</a> 
+        </p>
+</header>
 
-  </body>
+<main>
+  <h1>Крем-брюле и пломбир с малиновым демом </h1>
+  <a href="#"> Давай оба!</a>
+    <section>
+      <h2>Специальные предложения </h2>
+      <h3>Малинка Даром!</h3>
+      <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+      <a href="#">Хочу варенье!</a>
+      <h3>Шоколадки даром!</h3>
+      <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+      <a href="#">Хочу шоколадки!</a>
+    </section>
+
+    <section>
+      <h2> Хиты продаж </h2>
+      <ul>
+        <li><a href="#"><p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p></a>
+            <p>
+               310 Р/кг
+              <img src="#" width="267" height="267" alt="Мороженое">
+            </p>
+        </li>
+        <li><a href="#"><p>Сливочно-кофейное с кусочками шоколада</p></a>
+            <p>
+               380 Р/кг
+              <img src="#" width="267" height="267" alt="Мороженое">
+            </p>
+       </li>
+        <li><a href="#"><p>Сливочно-клубничное с присыпкой из белого шоколада</p></a>
+            <p> 
+              355 Р/кг
+              <img src="#" width="267" height="267" alt="Мороженое">
+            </p>
+        </li>
+        <li><a href="#"><p>Сливочное крем-брюле с карамельной подливкой </p></a>
+            <p>
+              415 Р/кг
+              <img src="#" width="267" height="267" alt="Мороженое">
+            </p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h3>Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+      <p><img src="#" width="49" height="49" alt="">
+        Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+      <p><img src="#" width="49" height="49" alt="">
+        Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+      <p><img src="#" width="49" height="49" alt="">
+        Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+      <p><img src="#" width="49" height="49" alt="">
+        Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+    </section>
+
+    <section>
+      <h2>Новости</h2>
+      <p>Новое в нашем блоге</p>
+      <p>10 способов сервировки фруктовых щербетов к столу<p>
+    </section>
+
+    <section>
+      <h2>Подписка</h2>
+      <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <p>
+         <label for="subscribe">Адрес почты</label>
+        <input type="email" name="subscribe" id="subscribe" placeholder="email@example.com">
+      </p>
+      <button type="submit">Отправить</button>
+      </form>
+    </section>
+
+    <section>
+      <h2>Как до нас добраться</h2>
+      <!-- Здесь будет карта -->
+    </section>
+
+<footer>    
+    <section>
+      <h2>Как нас найти</h2>
+      <ul>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+        <li>
+          <a href="#">Твитер</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Дополнительная инфомрация о нас</h2>
+      <ul>
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <p><img src="#" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
+      <p>Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
+    </section>
+</footer>  
+  
+
+    <!--Попап Обратная связь-->
+
+    <section>
+      <h2>Обратная связь</h2>
+      <p>Мы обязательно вам ответим!</p>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <p>
+          <label for="name-surname"> ФИО: </label>
+          <input type="text" name="name-surname" id="name-surname" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label for="email"> Электронная почта: </label>
+          <input type="email" name="email" id="email" placeholder="email@example.com">
+        </p>
+        
+        <label for="comments">Комментарий: </label>
+          <textarea name="comments" id="comments" cols="42" rows="15" placeholder="В свободной форме"></textarea>
+       <p>
+          <button type="submit">Отправить</button>
+      </p>
+      </form>
+      <button type="button">Закрыть</button>
+    </section>
+
+    
+</main>   
+
+</body>
 </html>
