--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a><img src="#" width="154" height="64" alt="CllacyShop"></a>
       <ul>
         <li>
-          <a href="blank.html"> Каталог</a>
+          <a href="catalog.html"> Каталог</a>
           <ul>
             <li><a href="#">Новинки</a></li>
             <li><a href="#">Сливочное</a></li>
