--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
     <header>
         <nav>
-            <a><img src="#" width="154" height="64" alt="CllacyShop"></a>
+            <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
             <ul>
                 <li>
                     <a href="blank.html"> Каталог</a>
@@ -133,7 +134,7 @@
                         <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-one.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>310 ₽/кг</p>
                 </li>
@@ -142,7 +143,7 @@
                         <h3>Сливочно-кофейное с кусочками шоколада</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-two.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>380 ₽/кг</p>
                 </li>
@@ -151,7 +152,7 @@
                         <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-three.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>355 ₽/кг</p>
                 </li>
@@ -160,7 +161,7 @@
                         <h3>Сливочное крем-брюле с карамельной подливкой </h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-four.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>415 ₽/кг</p>
                 </li>
@@ -169,7 +170,7 @@
                         <h3>Сливочное с брусничным джемом</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-five.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>325 ₽/кг</p>
                 </li>
@@ -178,7 +179,7 @@
                         <h3>Сливочно-черничное с цельными ягодами черники</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-six.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>410 ₽/кг</p>
                 </li>
@@ -187,7 +188,7 @@
                         <h3>Сливочно-лимонное с карамельной присыпкой</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-seven.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>315 ₽/кг</p>
                 </li>
@@ -196,7 +197,7 @@
                         <h3>Сливочное с шоколадной стружкой</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-eight.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>320 ₽/кг</p>
                 </li>
@@ -205,7 +206,7 @@
                         <h3>Сливочно-ванильное с кусочками шоколада</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-nine.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>440 ₽/кг</p>
                 </li>
@@ -214,7 +215,7 @@
                         <h3>Сливочноe с ментоловым сиропом</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-ten.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>435 ₽/кг</p>
                 </li>
@@ -223,7 +224,7 @@
                         <h3>Сливочное с кусочками черного шоколада</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-eleven.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>355 ₽/кг</p>
                 </li>
@@ -232,7 +233,7 @@
                         <h3>Сливочное с мятным сиропом</h3>
                     </a>
                     <p>
-                        <img src="#">
+                        <img src="images/catalog/icecream-twelve.jpg" width="267" height="267" alt="Мороженое">
                     </p>
                     <p>420 ₽/кг</p>
                 </li>
@@ -301,7 +302,7 @@
             </ul>
         </section>
         <section>
-            <p><img src="#" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
+            <p><img src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
             <p>Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
         </section>
     </footer>
