--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <header>
     <nav>
-      <a><img src="#" width="154" height="64" alt="CllacyShop"></a>
+      <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
       <ul>
         <li>
           <a href="catalog.html"> Каталог</a>
@@ -128,7 +129,7 @@
           </a>
           <p>
             <span>310 Р/кг</span>
-            <img src="#" width="267" height="267" alt="Мороженое">
+            <img src="images/icecream-one.jpg" width="267" height="267" alt="Мороженое">
           </p>
         </li>
         <li><a href="#">
@@ -136,7 +137,7 @@
           </a>
           <p>
             <span>380 Р/кг</span>
-            <img src="#" width="267" height="267" alt="Мороженое">
+            <img src="images/icecream-two.jpg" width="267" height="267" alt="Мороженое">
           </p>
         </li>
         <li><a href="#">
@@ -144,7 +145,7 @@
           </a>
           <p>
             <span>355 Р/кг</span>
-            <img src="#" width="267" height="267" alt="Мороженое">
+            <img src="images/icecream-three.jpg" width="267" height="267" alt="Мороженое">
           </p>
         </li>
         <li><a href="#">
@@ -152,7 +153,7 @@
           </a>
           <p>
             <span>415 Р/кг</span>
-            <img src="#" width="267" height="267" alt="Мороженое">
+            <img src="images/icecream-four.jpg" width="267" height="267" alt="Мороженое">
           </p>
         </li>
       </ul>
@@ -242,7 +243,7 @@
         </ul>
       </section>
       <section>
-        <p><img src="#" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
+        <p><img src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
         <p>Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
       </section>
     </footer>
