--- a/blank.html
+++ b/blank.html
@@ -3,28 +3,78 @@
 
 <head>
   <meta charset="utf-8">
-  <title>blank</title>
+  <title>HTML Academy: Глейси</title>
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <header>
     <nav>
-      <a><img src="img/logo.svg" width="154" height="64" alt="CllacyShop"></a>
+      <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
       <ul>
-        <li> <a href="blank.html"> Каталог </a></li>
-        <li> <a href="blank.html"> Доставка и оплата </a></li>
-        <li> <a href="blank.html"> О компании </a></li>
-        <li> <a href="index.html"> На главную</a></li>
+        <li>
+          <a href="catalog.html"> Каталог</a>
+          <ul>
+            <li><a href="#">Новинки</a></li>
+            <li><a href="#">Сливочное</a></li>
+            <li><a href="#">Щербеты</a></li>
+            <li><a href="#">Фруктовый лед</a></li>
+            <li><a href="#">Мелорин</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="blank.html">Доставка и оплата</a>
+        </li>
+        <li>
+          <a href="blank.html">О компании</a>
+        </li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="#"> Поиск</a></li>
-      <li><a href="#"> Вход </a></li>
-      <li><a href="#"> Пусто</a></li>
-    </ul>
-    <p> с 10 до 20, ежедневно <br>
-      <a href="tel:+7812452525">8 812 450-25-25</a>
-    </p>
+    <div class="search-wrapper">
+      <a class="search-link" href="#">Поиск</a>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <p>
+          <label>
+            Поиск
+            <input type="text" name="search" placeholder=" Крем-брюле">
+          </label>
+        </p>
+        <button class="visually-hidden" type="submit">Поиск</button>
+      </form>
+    </div> <!-- search-wrapper-->
+
+    <div class="login-wrapper">
+      <a class=" login-link" href="#">Вход</a>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <p>
+          <label for="login-login"> Логин </label>
+          <input type="email" name="email" id="login-login" placeholder="email@example.com">
+        </p>
+        <p>
+          <label for="login-password"> Пароль </label>
+          <input type="password" name="password" id="login-password" placeholder="******">
+        </p>
+        <button type="submit">Войти</button>
+        <p>
+          <a href="#">Забыли пароль?</a>
+          <a href="#">Новая регистрация</a>
+        </p>
+      </form>
+    </div>
+    <!--login-wrapper-->
+
+    <div class="shopbasket">
+      <p>
+        <a href="#"> Пусто</a>
+      </p>
+    </div>
+    <!--shopping-basket-->
+
+    <div>
+      <p> с 10 до 20, ежедневно <br>
+        <a href="tel:+7812452525">8 812 450-25-25</a>
+      </p>
+    </div>
   </header>
   <main>
 
@@ -67,7 +117,7 @@
       </ul>
     </section>
     <section>
-      <p><img src="#" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
+      <p><img src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
       <p>Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
     </section>
   </footer>
