--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>HTML Academy: Глейси</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
@@ -18,8 +18,8 @@
         <a class="main-header-logo"><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
         <ul class="site-navigation">
           <li>
-            <a href="catalog.html"> Каталог</a>
-            <ul class="site-navigation">
+            <a class="site-navigation-link" href="catalog.html"> Каталог</a>
+            <ul class="site-navigation site-navigation-inner">
               <li><a href="#">Новинки</a></li>
               <li><a href="#">Сливочное</a></li>
               <li><a href="#">Щербеты</a></li>
@@ -28,10 +28,10 @@
             </ul>
           </li>
           <li>
-            <a href="blank.html">Доставка и оплата</a>
+            <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
           </li>
           <li>
-            <a href="blank.html">О компании</a>
+            <a class="site-navigation-link" href="blank.html">О компании</a>
           </li>
         </ul>
       </nav>
