--- a/catalog.html
+++ b/catalog.html
@@ -155,7 +155,7 @@
         <main class="page-catalog container">
             <h1 class="page-title">Сливочное мороженое</h1>
             <section class="filters">
-                <form class="filters-form" action="https://echo.htmlacademy.ru" method="POST">
+                <form class="filters-form" action="https://echo.htmlacademy.ru" method="GET">
                     <fieldset class="filter-assortment">
                         <legend>Сортировка: </legend>
                         <select class=" select filters-option">
@@ -356,7 +356,7 @@
                         </a>
                         <p class="seller-img">
                             <span class="price">435 <span>&#8381;</span>/кг </span>
-                            <img src="images/catalog/icecream-ten.png" width="267" height="267" alt="Мороженое">
+                            <img class="catalog-item-image" src="images/catalog/icecream-ten.png" width="267" height="267" alt="Мороженое">
                         </p>
                     </li>
                     <li class="seller-item">
@@ -480,6 +480,9 @@
 
                 <section class="footer-info">
                     <h2>Дополнительная инфомрация о нас</h2>
+                    <svg width="15" height="13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.8 0a4.1 4.1 0 00-3.3 1.66A4.1 4.1 0 004.2 0 4.12 4.12 0 000 4c0 3.18 7.5 9 7.5 9S15 7.22 15 4a4.12 4.12 0 00-4.2-4z" fill="#fff"/>
+                      </svg>
                     <ul class="footer-info-list">
                         <li class="footer-info-item">
                             <a href="#">Для поставщиков</a>
