--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
           <p class="special-offer-info">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной
             присыпки совершенно бесплатно.
           </p>
+
           <a class="button special-offer-button" href="#">Хочу шоколадки!</a>
         </div>
       </section>
@@ -295,7 +296,7 @@
             </p>
             <p>
               <span class="modal-feedback-map-info"> Для заказов по телефону:</span> <br>
-              +7 800 555-86-28 <br>
+              <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a><br>
               <span class="modal-feedback-map-info"> (с 10 до 20 ежедневно) </span>
             </p>
             <a href="#" class="button">Форма обратной связи</a>
